--- a/style.css
+++ b/style.css
@@ -40,6 +40,17 @@ a {
 a:hover {
     color: var(--text-colour);
 }
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+
+    div {
+        margin: .25rem 1rem;
+    }
+}
+
 .display {
     border: solid;
     border-width: 8px;
