Tank class created
Next, you want to create a Map class in which the terrain and tank are contained and with a camera property for display in the sketch.

--- a/style.css
+++ b/style.css
@@ -47,8 +47,15 @@ nav {
     flex-wrap: wrap;
 
     div {
-        margin: .25rem 1rem;
+        border-left: solid 2px var(--text-colour);
+        border-right: solid 2px var(--text-colour);
+        flex-grow: 1;
+        text-align: center;
+        margin-left: -1px;
+        margin-right: -1px;
     }
+
+    padding: 0.5rem 1rem;
 }
 
 .display {
