--- a/battleground-builder/src/App.css
+++ b/battleground-builder/src/App.css
@@ -62,6 +62,15 @@ body {
   }
 }
 
+.toolbar {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  background-color: var(--background-dark);
+}
+
 #panel-region {
   .side-panel {
     background-color: var(--background-dark);
